; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_log_errors.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_log_errors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@compiler = common dso_local global i32 0, align 4
@stdout = common dso_local global i64 0, align 8
@log_file = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @log_errors to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_errors() #0 {
  %1 = load i64, i64* @stdout, align 8
  %2 = call i32 @tl_compiler_print_errors(i32* @compiler, i64 %1)
  %3 = load i64, i64* @log_file, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i64, i64* @log_file, align 8
  %7 = call i32 @tl_compiler_print_errors(i32* @compiler, i64 %6)
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @tl_compiler_print_errors(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
